--- a/src/app/pages/micro-loans/components/hero/hero.component.scss
+++ b/src/app/pages/micro-loans/components/hero/hero.component.scss
@@ -3,7 +3,6 @@
   max-width: 1690px;
   width: 100%;
   margin: 100px auto;
-  padding: 0 15px;
 }
 
 .main-text {
