--- a/src/app/pages/micro-loans/components/hero/main-search/main-search.component.scss
+++ b/src/app/pages/micro-loans/components/hero/main-search/main-search.component.scss
@@ -99,7 +99,7 @@ input[type=number] {
 }
 
 .link-mobile {
-  width: 90%;
+  width: fit-content;
   @include screen-size('tablet') {
     display: none;
   }
