--- a/src/app/pages/micro-loans/components/offers/offer-card/offer-card.component.scss
+++ b/src/app/pages/micro-loans/components/offers/offer-card/offer-card.component.scss
@@ -54,14 +54,9 @@ h1, h2, h3, h4, p, a {
   position: relative;
   max-width: 1200px;
   width: 100%;
-  padding: 0 15px;
 }
 
 .company-card:not(:last-child) {
-}
-
-.company-card {
-
 }
 
 .company-card {
