--- a/src/app/pages/micro-loans/components/rangeswiper/rangeswiper.component.scss
+++ b/src/app/pages/micro-loans/components/rangeswiper/rangeswiper.component.scss
@@ -23,7 +23,8 @@ h1, h2, h3, h4, p, a {
 }
 
 .offer {
-  padding: 30px 0;
+  background: #F9F9F9;
+  margin-bottom: 20px;
 }
 
 input[type=range] {
@@ -44,9 +45,8 @@ input[type=range] {
 .container {
   position: relative;
   max-width: 1690px;
-  width: 100%;
+  width: 97%;
   margin: 0 auto;
-  padding: 0 15px;
   background: #F9F9F9;
 }
 
